# tape_pytorch

./: .gitignore  README.md  pyproject.toml  rin_model.py  tape_model.py  train_tape_diffusion.py
config/: config.yaml
config/model/: rin.yaml  tape.yaml  unet.yaml
config/optimizer/: adamw.yaml  lion.yaml
config/scheduler/: cosine.yaml
rin_pytorch/: attend.py  rin_pytorch.py
