[project]
name = "tape_pytorch"
version = "0.1.0"
description = "tape pytorch implementation for CIFAR10"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.3.2",
    "ruff>=0.9.10",
    "spconv>=2.3.8",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "webdataset>=0.2.111",
    "flash-attn>=2.7.4.post1",
    "torch-scatter>=2.1.2",
    "pytorch-fid>=0.3.0",
    "ema-pytorch>=0.7.7",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
    "accelerate>=1.5.2",
    "einops>=0.8.1",
    "diffusers@git+https://github.com/huggingface/diffusers",
    "transformers>=4.49.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "lion-pytorch>=0.2.3",
    "beartype>=0.20.0",
]
[tool.uv]
no-build-isolation-package = ["flash-attn", "torch-scatter"]
